[project]
name = "payments_for_lending"
authors = [
    { name = "Your Company", email = "hello@example.com" }
]
description = "ACH Autopay integration for ERPNext Lending module"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "payments_for_lending"
